ES|QL: Add TRANGE ES|QL function
Add explicit start capability to TRANGE

Closes #135599